--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.0",
+    "choices.js": "^9.0.1",
+    "jquery": "^3.6.0",
     "js-autocomplete": "^1.0.4",
     "toastr": "^2.1.4",
     "turbolinks": "^5.2.0",
