--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
   "name": "myapp",
   "private": true,
+  "scripts": {
+    "dev": "react-scripts start",
+    "start": "serve -s build",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
+  },
   "dependencies": {
     "@popperjs/core": "^2.9.3",
     "@rails/actioncable": "^6.0.0",
@@ -10,6 +18,7 @@
     "choices.js": "^9.0.1",
     "jquery": "^3.6.0",
     "js-autocomplete": "^1.0.4",
+    "serve": "^12.0.0",
     "toastr": "^2.1.4",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
