--- a/package.json
+++ b/package.json
@@ -2,12 +2,7 @@
   "name": "myapp",
   "private": true,
   "scripts": {
-    "dev": "react-scripts start",
-    "start": "serve -s build",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "heroku-postbuild": "npm run build"
+    "start": "node index.js"
   },
   "dependencies": {
     "@popperjs/core": "^2.9.3",
