--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.0",
     "choices.js": "^9.0.1",
+    "filepicker-js": "^2.4.18",
     "jquery": "^3.6.0",
     "js-autocomplete": "^1.0.4",
     "serve": "^12.0.0",
