--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jquery": "^3.6.0",
     "js-autocomplete": "^1.0.4",
     "serve": "^12.0.0",
+    "stimulus": "^2.0.0",
     "toastr": "^2.1.4",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
